Correct a bug in v12 and speed-up the computation

--- a/GS-model/par.ini
+++ b/GS-model/par.ini
@@ -1,10 +1,10 @@
 [input]
-xi		        = data/xi_085.txt
-v12		        = data/v12_085.txt
-s12		        = data/s12_085.txt
+xi		        = data/xi_086.txt
+v12		        = data/v12_086.txt
+s12		        = data/s12_086.txt
 
-data_xi0        = data/SGC_bin5_single_mock_xi0.dat
-data_xi2        = data/SGC_bin5_single_mock_xi2.dat
+data_xi0        = data/ELG_SGC_bin5_v4_xi0.dat
+data_xi2        = data/ELG_SGC_bin5_v4_xi2.dat
 data_xi4        =
 data_cov        = data/SGC_bin5_cov_x0x2.dat
 Nmocks			= 1000
@@ -23,42 +23,43 @@ mnu             = 0.06
 omk             = 0.0      
 w               = -1.0     
 
-z				= 0.85
+z				= 0.86
 
 [mcmc]
 peak_background = False
 
-alpha_p_min	    = 0.0
-alpha_v_min	    = 0.0
+alpha_p_min	    = 0.5
+alpha_v_min	    = 0.5
 fz_min		    = 0.0
 F1_min		    = 0.0
-F2_min		    = -3.0
+F2_min		    = -5.0
 sigma_FoG_min   = 0.0
 
-alpha_p_max	    = 4.0
-alpha_v_max	    = 4.0
-fz_max		    = 4.0
+alpha_p_max	    = 1.5
+alpha_v_max	    = 1.5
+fz_max		    = 3.0
 F1_max		    = 3.0
-F2_max		    = 7.0
+F2_max		    = 5.0
 sigma_FoG_max   = 10.0
 
 my_guess        = False
-Nparticles      = 16
+pso_init		= True
+Nparticles      = 32
 
 alpha_p_0	    = 1.0
 alpha_v_0	    = 1.0
-fz_0		    = 0.8
+fz_0		    = 0.85
 F1_0		    = 0.4
 F2_0		    = 0.0
-sigma_FoG_0     = 3.0
+sigma_FoG_0     = 2.5
 
 Nsteps			= 1000
-Nburns			= 100
+Nburns			= 200
 Nwalkers		= 16
 
-label			= mock_sgc
+label			= elg_sgc_bin5_nopeak
 
 [slurm]
 
-queue           = s1
-ncpus           = 6
+queue           = p4
+ncpus           = 16
